<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>TemplateSelenium</groupId>
  <artifactId>TemplateSelenium</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
</properties>
  
   <dependencies>
	  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
	  <dependency>
  			 <groupId>org.seleniumhq.selenium</groupId>
   			 <artifactId>selenium-java</artifactId>
   			 <version>4.8.2</version>
	  </dependency>
	  
	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
	<dependency>
    	<groupId>org.testng</groupId>
    	<artifactId>testng</artifactId>
    	<version>7.7.1</version>
    	<scope>compile</scope>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-api</artifactId>
	    <version>2.20.0</version>
	</dependency>	
	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-core</artifactId>
	    <version>2.20.0</version>
	</dependency>
   </dependencies>
   
   <build>
      <plugins>
        <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
        <configuration>
          <suiteXmlFiles>
            <suiteXmlFile>${suiteXml}</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
      </plugin>
      </plugins>
    </build>
    
  
</project>